// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Course Builder UX Model cloning a course clones a course 1`] = `
Object {
  "cloned_from_id": "2",
  "copy_question_library": true,
  "estimated_student_count": 100,
  "is_preview": false,
  "name": "Local Test Course Two",
  "num_sections": 1,
  "offering_id": 1,
  "term": "spring",
  "time_zone": "Central Time (US & Canada)",
  "year": 2018,
}
`;

exports[`Course Builder UX Model creates a course 1`] = `
Object {
  "copy_question_library": true,
  "estimated_student_count": 100,
  "is_preview": false,
  "name": "TEST COURSE FOR TESTING",
  "num_sections": 1,
  "offering_id": 1,
  "term": "spring",
  "time_zone": "Central Time (US & Canada)",
  "year": 2018,
}
`;
